<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/movie_title_text_view"
        android:textColor="#c92020"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:padding="5dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/constraint_guideline_percent"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="0dp"/>

    <ImageView
        android:layout_width="170dp"
        android:layout_height="280dp"
        android:id="@+id/movie_image_view"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:padding="@dimen/image_view_padding"
        android:contentDescription="@string/image_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_title_text_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/released_on_text"
        android:textStyle="italic"
        android:textColor="#c92020"
        android:id="@+id/released_text_view"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
        app:layout_constraintTop_toTopOf="@+id/movie_image_view"
        app:layout_constraintTop_toBottomOf="@+id/movie_title_text_view"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/year_text_view"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
        app:layout_constraintTop_toBottomOf="@+id/released_text_view"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rating_text_view"
        android:text="@string/user_rating_text"
        android:textColor="#c92020"
        android:textStyle="italic"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
        app:layout_constraintTop_toBottomOf="@+id/year_text_view"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rating_value_text_view"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
        app:layout_constraintTop_toBottomOf="@+id/rating_text_view"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/favourite_text_view"
        android:textStyle="italic"
        android:textColor="#c92020"
        android:text="@string/favourite_text"
        android:gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
        app:layout_constraintTop_toBottomOf="@+id/rating_value_text_view" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@mipmap/favourite_icon"
        android:id="@+id/favourite_image_view"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
        app:layout_constraintTop_toBottomOf="@+id/favourite_text_view"/>
</android.support.constraint.ConstraintLayout>